--- a/src/stability_agent/package.xml
+++ b/src/stability_agent/package.xml
@@ -57,6 +57,9 @@
   <exec_depend>std_msgs</exec_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <build_depend>multi_agent_system</build_depend>
+  <build_export_depend>multi_agent_system</build_export_depend>
+  <exec_depend>multi_agent_system</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
